syntax = "proto3";

option go_package = "dreamcity/shared/pb/world";

package world;

import "code.proto";
//=============================
message Position {
  float x = 1;
  float y = 2;
  float z = 3;
  float v = 4;
}
message Action {
  int32 sit   = 1;
  int32 jump  = 2;
  int32 dance = 3;
}
message Player{
  int64 pid = 1;
  Position pos = 2;
  Action act = 3;
}
//=============================
message EnterReq {
  string sid = 1;
  Position pos = 2;
}
message EnterRes {
  code.Code code = 1;
}
//=============================
message LeaveReq {}
message LeaveRes {
  code.Code code = 1;
}
//=============================
message SyncInfoReq {
  Position pos = 1;
  Action act = 2;
}
message SyncInfoRes {
  code.Code code = 1;
}
//=============================
// 广播
message BroadCast{
  enum Tp {
    PlayerAppear=0; // 玩家出现
    PlayerInfo=1;   // 玩家信息
    PlayerLeave=2;
  }
  int64 pid=1;
  Tp tp=2;
  oneof Data {
    Player player = 3;
  }
}
// 获取周围玩家信息
message SyncArea{
  repeated Player ps=1;
}
// 同步其它玩家离开
message SyncLeave{
  int64 pid=1;
}